Adds PDF generation and email sending
Implements PDF generation for projects and a generic note, including saving to the file system.

Adds email sending capabilities with PDF attachments.

The changes allow users to export project data as a PDF and send it via email, and generate and preview a simple PDF note.

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,5 +50,14 @@
             </div>
         </div>
     </div>
+
+    <div class="mt-4">
+        <a href="{{ path('app_send_pdf') }}" class="btn btn-success">
+            Envoyer le PDF du tableau par e-mail
+        </a>
+        <a href="{{ path('app_pdf_preview') }}" class="btn btn-outline-secondary ms-2">
+            Prévisualiser le PDF
+        </a>
+    </div>
 </div>
 {% endblock %}
