--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_home') }}">Accueil</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="{{ path('projets_index') }}">Projets</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('clients_index') }}">Clients</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('projets_export_send') }}">Exporter PDF</a>
                         </li>
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
